[package]
name = "ytfeed"
version = "0.2.2"
edition = "2021"
authors = ["Rijk van Putten <rijk@rijkvp.nl>"]
description = "Better RSS/Atom feeds for YouTube"
readme = "README.md"
homepage = "https://github.com/rijkvp/ytfeed"
license = "AGPL-3.0"

[dependencies]
atom_syndication = "0.12"
axum = { version = "0.8" }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
futures = "0.3"
thiserror = "2.0"
serde = { version = "1.0", features = [ "derive" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
scraper = "0.22"
reqwest = { version = "0.12", default-features = false, features = [ "rustls-tls", "brotli" ] }
parking_lot = "0.12"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
bytes = "1.9"
num-format = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
