[package]
name = "ytfeed"
version = "0.5.0"
edition = "2021"
authors = ["Rijk van Putten <rijk@rijkvp.nl>"]
description = "Better RSS/Atom feeds for YouTube"
readme = "README.md"
homepage = "https://github.com/rijkvp/ytfeed"
license = "AGPL-3.0"

[dependencies]
atom_syndication = "0.12"
axum = { version = "0.8" }
bytes = "1.9"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
num-format = "0.4"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = [ "rustls-tls", "gzip", "brotli" ] }
scraper = "0.22"
serde = { version = "1.0", features = [ "derive" ] }
serde_html_form = "0.2.7"
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
